# advent-of-code

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  pyproject.toml
01-trebuchet/: part-one.py  part-two.py
02-cube-conundrum/: part-one.py  part-two.py
03-gear-ratios/: part-one.py  part-two.py
04-scratch-cards/: part-one.py  part-two.py
05-if-you-give-a-seed-a-fertilizer/: part-one.py  part-two.py
06-wait-for-it/: BUILD  part-one.cpp  part-two.cpp
07-camel-cards/: part-one.py  part-two.py
08-haunted-wasteland/: BUILD  part-one.py  part-two.cpp
09-mirage-maintaince/: part-two.py
10-pipe-maze/: BUILD  part-one.cpp  part-two.cpp
11-cosmic-expansion/: BUILD  part-one.py  part-two.py
12-hot-springs/: part-one.py  part-two.py
13-point-of-incidence/: BUILD  part-one.py  part-two.py
14-parabolic-reflector-dish/: part-one.py  part-two.py
15-lens-library/: part-one.py  part-two.py
16-floor-will-be-lava/: part-one.py  part-two.py
17-clumsy-crucible/: BUILD  part-one.py  part-two.py
18-lavaduct-lagoon/: BUILD  part-one.py  part-two.py
19-aplenty/: part-one.py  part-two.py
20-pulse-propagation/: BUILD  broadcaster.rs  crt.rs  graph.rs  part-one.rs  part-two.rs
2023-01-trebuchet/: part-one.py  part-two.py
2023-02-cube-conundrum/: part-two.py
2023-03-gear-ratios/: part-one.py  part-two.py
2023-04-scratch-cards/: part-one.py  part-two.py
2023-05-if-you-give-a-seed-a-fertilizer/: part-one.py  part-two.py
2023-06-wait-for-it/: part-one.cpp  part-two.cpp
2023-07-camel-cards/: BUILD  part-one.py
2023-08-haunted-wasteland/: part-one.py  part-two.cpp
2023-09-mirage-maintaince/: part-one.py
2023-10-pipe-maze/: BUILD  part-one.cpp  part-two.cpp
2023-12-hot-springs/: part-one.py  part-two.py
(+78 files in other folders)
