"""
Source of all adventure-of-code solutions.
"""

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "eca42c63700fccdc49cf58177e0a96f0f6075a68",
)
