"""
Source of all adventure-of-code solutions.
"""

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "eca42c63700fccdc49cf58177e0a96f0f6075a68",
)

bazel_dep(name = "rules_python", version = "0.27.1")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//dependencies:requirements_lock.txt",
    requirements_windows = "//dependencies:requirements_windows.txt",
)
use_repo(pip, "pypi")
